syntax = "proto3";
package common;

enum Status {
    OK = 0;
    ERROR = 1;
    TIMEOUT = 2;
}

message FileChunk {
    string file_name = 1;
    uint32 chunk_index = 2;
    bytes data = 3;
    uint64 size = 4;
}

message FileMetadata {
    string file_name = 1;
    uint64 total_size = 2;
    repeated ChunkMetadata chunks = 3;
}

message ChunkMetadata {
    string file_name = 1;
    uint32 chunk_index = 2;
    string server_address = 3;
    uint32 server_port = 4;
    string replica_server_address = 5;
    uint32 replica_server_port = 6;
}
